fix: schedule alignment

--- a/css/schedule.css
+++ b/css/schedule.css
@@ -17,6 +17,13 @@
 	margin: auto;
 }
 
+.schedule-content-div{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	height: 100%;
+}
 .schedule-heading {
 	font-size: 3.5rem;
 	font-weight: 600;
